--- a/wiki/index.html
+++ b/wiki/index.html
@@ -231,11 +231,17 @@ Error message and password prompt
 
 <li>3rd June 2020</li>
 
+<li>Advent Of Code, Day 10 2018</li>
+
+<li>GraphViz</li>
+
 <li>Lisp Languages</li>
 
 <li>Live Coding</li>
 
 <li>New Tiddler</li>
+
+<li>RegEx</li>
 
 </ul>
 </p>
@@ -10723,7 +10729,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200604075804751" list="[[Live Coding]] [[Lisp Languages]]" modified="20200604075804751" title="$:/StoryList">
+<div list="GraphViz RegEx [[Advent Of Code, Day 10 2018]] [[Live Coding]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10784,7 +10790,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200604075901070" modified="20200604075901964" title="$:/temp/NewTagName">
+<div created="20200604075901070" modified="20200604081534112" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -10899,6 +10905,18 @@ Error message and password prompt
 <div created="20200603092811474" modified="20200603092821079" tags="Journal" title="3rd June 2020">
 <pre>Testing</pre>
 </div>
+<div created="20200604081004905" modified="20200604081117194" tags="advent-of-code" title="Advent Of Code, Day 10 2018">
+<pre>Advent Of Code - Day 10, 2018
+Here’s my solution to day 10 of Advent Of Code; inside the asteroids game
+
+The problem was to simulate a set of stars and figure out the password they spelled out at the minimumm distance.
+
+https://www.reddit.com/r/adventofcode/comments/a4xzuf/solved_inside_an_asteroids_game/?utm_source=share&amp;utm_medium=web2x</pre>
+</div>
+<div created="20200604081515353" modified="20200604081605057" tags="graphviz" title="GraphViz">
+<pre>A post on how to use it to visualize code:
+https://chrismaughan.com/blog/coding/2019_07_01_graphviz/</pre>
+</div>
 <div created="20200604075809465" modified="20200604075904519" tags="lisp scheme" title="Lisp Languages">
 <pre>* ''Fe'' https://github.com/rxi/fe</pre>
 </div>
@@ -10936,6 +10954,9 @@ Error message and password prompt
 </div>
 <div created="20200603092341586" modified="20200603092347144" tags="" title="New Tiddler">
 <pre></pre>
+</div>
+<div created="20200604081204936" modified="20200604081229944" tags="" title="RegEx">
+<pre>''Article about Finite Automata'' https://swtch.com/~rsc/regexp/regexp1.html</pre>
 </div>
 
 
