Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -229,8 +229,6 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>3rd June 2020</li>
-
 <li>Advent Of Code, Day 10 2018</li>
 
 <li>GraphViz</li>
@@ -238,8 +236,6 @@ Error message and password prompt
 <li>Lisp Languages</li>
 
 <li>Live Coding</li>
-
-<li>New Tiddler</li>
 
 <li>RegEx</li>
 
@@ -10729,7 +10725,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="GraphViz RegEx [[Advent Of Code, Day 10 2018]] [[Live Coding]]" title="$:/StoryList">
+<div created="20200604083453918" list="$:/core/ui/MoreSideBar/All [[Advent Of Code, Day 10 2018]]" modified="20200604083600351" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10902,9 +10898,6 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200603092811474" modified="20200603092821079" tags="Journal" title="3rd June 2020">
-<pre>Testing</pre>
-</div>
 <div created="20200604081004905" modified="20200604081117194" tags="advent-of-code" title="Advent Of Code, Day 10 2018">
 <pre>Advent Of Code - Day 10, 2018
 Here’s my solution to day 10 of Advent Of Code; inside the asteroids game
@@ -10951,9 +10944,6 @@ https://chrismaughan.com/blog/coding/2019_07_01_graphviz/</pre>
 * ''Cellular Automation Demo'' https://movablefeastmachine.org/
 * ''Shader Toy launcher for Vulkan'' https://github.com/danilw/vulkan-shadertoy-launcher
 </pre>
-</div>
-<div created="20200603092341586" modified="20200603092347144" tags="" title="New Tiddler">
-<pre></pre>
 </div>
 <div created="20200604081204936" modified="20200604081229944" tags="" title="RegEx">
 <pre>''Article about Finite Automata'' https://swtch.com/~rsc/regexp/regexp1.html</pre>
