--- a/wiki/index.html
+++ b/wiki/index.html
@@ -193,6 +193,8 @@ Error message and password prompt
 
 <li>$:/isEncrypted</li>
 
+<li>$:/palette</li>
+
 <li>$:/plugins/flibbles/relink</li>
 
 <li>$:/plugins/rmnvsl/krystal</li>
@@ -9704,6 +9706,9 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
+<div created="20200604083629822" modified="20200604083953725" title="$:/palette">
+<pre>$:/palettes/Vanilla</pre>
+</div>
 <div author="Flibbles" core-version="&gt;=5.1.14" created="20200526001805463" demo="http://flibbles.github.io/tw5-relink/" dependents="" description="Flexibility when relinking renamed tiddlers" list="readme configuration" name="Relink" plugin-type="plugin" source="https://github.com/flibbles/tw5-relink" title="$:/plugins/flibbles/relink" type="application/json" version="1.10.0">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -10725,7 +10730,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200604083453918" list="$:/core/ui/MoreSideBar/All [[Advent Of Code, Day 10 2018]]" modified="20200604083600351" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
