Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -215,6 +215,8 @@ Error message and password prompt
 
 <li>$:/state/tab--2112689675</li>
 
+<li>$:/state/tab--697582678</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
@@ -440,6 +442,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth</li>
 
 <li>Advent Of Code, Day 10 2018</li>
+
+<li>Draft of 'Live Coding'</li>
 
 <li>GraphViz</li>
 
@@ -11244,8 +11248,11 @@ Error message and password prompt
 <div created="20200603092327596" modified="20200603092330476" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200603084519756" modified="20200604085208382" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200604091411526" modified="20200604091411526" title="$:/state/tab--697582678">
+<pre>$:/core/ui/ControlPanel/Settings/CodeMirror</pre>
+</div>
+<div created="20200603084519756" modified="20200604091409895" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
 </div>
 <div created="20200603084521283" modified="20200603092804309" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -11257,9 +11264,9 @@ Error message and password prompt
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
-<div created="20200604085030271" list="$:/ControlPanel" modified="20200604085030271" title="$:/StoryList">
+<div list="[[Live Coding]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12395,6 +12402,38 @@ Here’s my solution to day 10 of Advent Of Code; inside the asteroids game
 The problem was to simulate a set of stars and figure out the password they spelled out at the minimumm distance.
 
 https://www.reddit.com/r/adventofcode/comments/a4xzuf/solved_inside_an_asteroids_game/?utm_source=share&amp;utm_medium=web2x</pre>
+</div>
+<div created="20200603094139854" draft.of="Live Coding" draft.title="Live Coding" modified="20200604091333087" tags="live-coding" title="Draft of 'Live Coding'" type="text/vnd.tiddlywiki">
+<pre>* [[Lisp Languages]]
+* ''Sonic Pi'' Forum: https://in-thread.sonic-pi.net/
+* ''Sonic Pi'' On Stack Overflow Blog: https://stackoverflow.blog/2020/01/29/the-live-coding-language-that-lets-you-be-an-actual-rock-star/
+* ''Kortex'' https://mindbuffer.net/kortex
+* ''Imi Tone'' https://www.kickstarter.com/projects/evanbalster/imitone-mind-to-melody
+* ''Grid Sound'' https://gridsound.com/#/
+* ''Audio'' Vis https://github.com/willianjusten/awesome-audio-visualization
+* ''Software for Graphics Thread on lines'' https://llllllll.co/t/software-to-create-procedural-graphics/27660/10
+* ''Hydra Book'' https://naotohieda.com/blog/hydra-book/
+* ''Interactive Shader Format'' https://www.interactiveshaderformat.com/
+* ''Lua + OSC bindings for Open Frameworks'' https://github.com/danomatika/loaf
+* ''Ear Sketch, Georgia Tech'' https://earsketch.gatech.edu/landing/#/
+* ''xi LiveCode'' https://github.com/xi-livecode/xi
+* ''Sequencer, unknown demo HMH'' https://www.youtube.com/watch?v=x7c-9dXZouo&amp;feature=youtu.be
+* ''Sketch Synth'' https://github.com/jeonghopark/SketchSynth-Simple
+* ''Live coding in Rust'' https://nannou.cc/
+* ''Kode Life'' https://hexler.net/products/kodelife
+* ''Future Of Coding projects'' https://github.com/pel-daniel/mind-bicycles
+* ''Alive Coding'' https://s-ol.nu/alivecoding
+* ''Max MSP'' https://cycling74.com/products/max/
+* ''WDL-OL for VST'' https://github.com/justinfrankel/WDL
+* ''Pure Data'' http://msp.ucsd.edu/Pd_documentation/
+* ''Layered Graph Drawing'' https://en.wikipedia.org/wiki/Layered_graph_drawing
+* ''Automatic graph layout'' https://en.wikipedia.org/wiki/Microsoft_Automatic_Graph_Layout
+* ''CEPL'' https://github.com/cbaggers/cepl
+* ''Projection Boxes'' http://cseweb.ucsd.edu/~lerner/papers/projection-boxes-chi2020.pdf
+* ''Glamorous Toolkit'' https://gtoolkit.com/
+* ''Cellular Automation Demo'' https://movablefeastmachine.org/
+* ''Shader Toy launcher for Vulkan'' https://github.com/danilw/vulkan-shadertoy-launcher
+</pre>
 </div>
 <div created="20200604081515353" modified="20200604081605057" tags="graphviz" title="GraphViz">
 <pre>A post on how to use it to visualize code:
