--- a/wiki/index.html
+++ b/wiki/index.html
@@ -169,6 +169,8 @@ Error message and password prompt
 
 <li>$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal</li>
 
+<li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/codemirror-keymap-vim</li>
+
 <li>$:/config/RelinkOnRename</li>
 
 <li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/close-others</li>
@@ -516,6 +518,9 @@ Error message and password prompt
 </div>
 <div created="20200603085350489" modified="20200603092237069" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
 <pre>no</pre>
+</div>
+<div created="20200604092421487" modified="20200604092421487" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/codemirror-keymap-vim">
+<pre>yes</pre>
 </div>
 <div created="20200604075835892" modified="20200604075835892" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
@@ -11299,9 +11304,9 @@ Error message and password prompt
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
-<div created="20200604091458886" list="$:/ControlPanel $:/plugins/tiddlywiki/codemirror" modified="20200604091637281" title="$:/StoryList">
+<div created="20200604092326248" list="" modified="20200604092328193" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
