--- a/wiki/index.html
+++ b/wiki/index.html
@@ -461,6 +461,8 @@ Error message and password prompt
 
 <li>Live Coding</li>
 
+<li>Misc Links</li>
+
 <li>RegEx</li>
 
 </ul>
@@ -11306,7 +11308,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200604092326248" list="" modified="20200604092328193" title="$:/StoryList">
+<div list="[[Misc Links]] [[Live Coding]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12516,6 +12518,9 @@ https://chrismaughan.com/blog/coding/2019_07_01_graphviz/</pre>
 * ''Cellular Automation Demo'' https://movablefeastmachine.org/
 * ''Shader Toy launcher for Vulkan'' https://github.com/danilw/vulkan-shadertoy-launcher
 </pre>
+</div>
+<div created="20200605130627209" modified="20200605130755734" tags="links note-taking" title="Misc Links">
+<pre>''A Non Linear Writing System'' https://s.ai/nlws/</pre>
 </div>
 <div created="20200604081204936" modified="20200604081229944" tags="" title="RegEx">
 <pre>''Article about Finite Automata'' https://swtch.com/~rsc/regexp/regexp1.html</pre>
