Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -455,6 +455,8 @@ Error message and password prompt
 
 <li>Draft of 'Live Coding'</li>
 
+<li>DX7</li>
+
 <li>GraphViz</li>
 
 <li>Lisp Languages</li>
@@ -11308,7 +11310,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="[[Misc Links]] [[Live Coding]]" title="$:/StoryList">
+<div list="DX7 [[Live Coding]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12479,6 +12481,9 @@ https://www.reddit.com/r/adventofcode/comments/a4xzuf/solved_inside_an_asteroids
 * ''Cellular Automation Demo'' https://movablefeastmachine.org/
 * ''Shader Toy launcher for Vulkan'' https://github.com/danilw/vulkan-shadertoy-launcher
 </pre>
+</div>
+<div created="20200608152338505" modified="20200608152406989" tags="dx7 audio" title="DX7">
+<pre>''Programming'' https://homepages.abdn.ac.uk/d.j.benson/pages/dx7/manuals/prgrmdx7.pdf</pre>
 </div>
 <div created="20200604081515353" modified="20200604081605057" tags="graphviz" title="GraphViz">
 <pre>A post on how to use it to visualize code:
