Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -11310,7 +11310,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="DX7 [[Live Coding]]" title="$:/StoryList">
+<div created="20200609142443021" list="$:/core/ui/MoreSideBar/All [[Advent Of Code, Day 10 2018]]" modified="20200609142523175" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12482,8 +12482,10 @@ https://www.reddit.com/r/adventofcode/comments/a4xzuf/solved_inside_an_asteroids
 * ''Shader Toy launcher for Vulkan'' https://github.com/danilw/vulkan-shadertoy-launcher
 </pre>
 </div>
-<div created="20200608152338505" modified="20200608152406989" tags="dx7 audio" title="DX7">
-<pre>''Programming'' https://homepages.abdn.ac.uk/d.j.benson/pages/dx7/manuals/prgrmdx7.pdf</pre>
+<div created="20200608152338505" modified="20200609142507338" tags="dx7 audio" title="DX7">
+<pre>''Programming'' https://homepages.abdn.ac.uk/d.j.benson/pages/dx7/manuals/prgrmdx7.pdf
+''Group Discussion on Fine Tune/Course''
+https://yamahadx.yahoogroups.narkive.com/gS4pivQC/question-04-detune</pre>
 </div>
 <div created="20200604081515353" modified="20200604081605057" tags="graphviz" title="GraphViz">
 <pre>A post on how to use it to visualize code:
