Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -169,6 +169,8 @@ Error message and password prompt
 
 <li>$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal</li>
 
+<li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/codemirror</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/codemirror-keymap-vim</li>
 
 <li>$:/config/RelinkOnRename</li>
@@ -520,8 +522,11 @@ Error message and password prompt
 <div created="20200603093955538" modified="20200603093957680" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/tag-manager">
 <pre>show</pre>
 </div>
-<div created="20200603085350489" modified="20200603092237069" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
-<pre>no</pre>
+<div created="20200603085350489" modified="20200609144157350" title="$:/config/Plugins/Disabled/$:/plugins/rmnvsl/krystal">
+<pre>yes</pre>
+</div>
+<div created="20200609144209295" modified="20200609144209295" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/codemirror">
+<pre>yes</pre>
 </div>
 <div created="20200604092421487" modified="20200604092421487" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/codemirror-keymap-vim">
 <pre>yes</pre>
@@ -11310,7 +11315,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200609142443021" list="$:/core/ui/MoreSideBar/All [[Advent Of Code, Day 10 2018]]" modified="20200609142523175" title="$:/StoryList">
+<div created="20200609142443021" list="$:/ControlPanel $:/plugins/tiddlywiki/codemirror" modified="20200609144207375" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
