--- a/wiki/index.html
+++ b/wiki/index.html
@@ -453,6 +453,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth</li>
 
+<li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
+
 <li>Advent Of Code, Day 10 2018</li>
 
 <li>Draft of 'Live Coding'</li>
@@ -11291,8 +11293,8 @@ Error message and password prompt
 <div created="20200603085337939" modified="20200603093009259" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
 <pre>readme</pre>
 </div>
-<div created="20200603093824963" modified="20200604085135447" title="$:/state/tab--1963855381">
-<pre>$:/plugins/rmnvsl/krystal/settings</pre>
+<div created="20200603093824963" modified="20200609145712041" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
 <div created="20200603092327596" modified="20200603092330476" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
@@ -11300,8 +11302,8 @@ Error message and password prompt
 <div created="20200604091411526" modified="20200604091411526" title="$:/state/tab--697582678">
 <pre>$:/core/ui/ControlPanel/Settings/CodeMirror</pre>
 </div>
-<div created="20200603084519756" modified="20200604091636000" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200603084519756" modified="20200609145705197" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200603084521283" modified="20200603092804309" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -11315,7 +11317,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200609142443021" list="$:/ControlPanel $:/plugins/tiddlywiki/codemirror" modified="20200609144207375" title="$:/StoryList">
+<div created="20200609145703676" list="[[Live Coding]]" modified="20200609145741723" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12446,6 +12448,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20200604085128391" modified="20200604085129370" title="$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth">
 <pre>850px</pre>
+</div>
+<div created="20200609145714499" modified="20200609145714499" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
+<pre>fluid-fixed</pre>
 </div>
 <div created="20200604081004905" modified="20200604081117194" tags="advent-of-code" title="Advent Of Code, Day 10 2018">
 <pre>Advent Of Code - Day 10, 2018
