--- a/wiki/index.html
+++ b/wiki/index.html
@@ -457,8 +457,6 @@ Error message and password prompt
 
 <li>Advent Of Code, Day 10 2018</li>
 
-<li>Draft of 'Live Coding'</li>
-
 <li>DX7</li>
 
 <li>GraphViz</li>
@@ -11317,7 +11315,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200609145703676" list="[[Live Coding]]" modified="20200609145741723" title="$:/StoryList">
+<div created="20200609150013704" list="[[Live Coding]] [[Live Coding]]" modified="20200609150013704" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12459,38 +12457,6 @@ Here’s my solution to day 10 of Advent Of Code; inside the asteroids game
 The problem was to simulate a set of stars and figure out the password they spelled out at the minimumm distance.
 
 https://www.reddit.com/r/adventofcode/comments/a4xzuf/solved_inside_an_asteroids_game/?utm_source=share&amp;utm_medium=web2x</pre>
-</div>
-<div created="20200603094139854" draft.of="Live Coding" draft.title="Live Coding" modified="20200604091626399" tags="live-coding" title="Draft of 'Live Coding'" type="text/vnd.tiddlywiki">
-<pre>* [[Lisp Languages]]
-* ''Sonic Pi'' Forum: https://in-thread.sonic-pi.net/
-* ''Sonic Pi'' On Stack Overflow Blog: https://stackoverflow.blog/2020/01/29/the-live-coding-language-that-lets-you-be-an-actual-rock-star/
-* ''Kortex'' https://mindbuffer.net/kortex
-* ''Imi Tone'' https://www.kickstarter.com/projects/evanbalster/imitone-mind-to-melody
-* ''Grid Sound'' https://gridsound.com/#/
-* ''Audio'' Vis https://github.com/willianjusten/awesome-audio-visualization
-* ''Software for Graphics Thread on lines'' https://llllllll.co/t/software-to-create-procedural-graphics/27660/10
-* ''Hydra Book'' https://naotohieda.com/blog/hydra-book/
-* ''Interactive Shader Format'' https://www.interactiveshaderformat.com/
-* ''Lua + OSC bindings for Open Frameworks'' https://github.com/danomatika/loaf
-* ''Ear Sketch, Georgia Tech'' https://earsketch.gatech.edu/landing/#/
-* ''xi LiveCode'' https://github.com/xi-livecode/xi
-* ''Sequencer, unknown demo HMH'' https://www.youtube.com/watch?v=x7c-9dXZouo&amp;feature=youtu.be
-* ''Sketch Synth'' https://github.com/jeonghopark/SketchSynth-Simple
-* ''Live coding in Rust'' https://nannou.cc/
-* ''Kode Life'' https://hexler.net/products/kodelife
-* ''Future Of Coding projects'' https://github.com/pel-daniel/mind-bicycles
-* ''Alive Coding'' https://s-ol.nu/alivecoding
-* ''Max MSP'' https://cycling74.com/products/max/
-* ''WDL-OL for VST'' https://github.com/justinfrankel/WDL
-* ''Pure Data'' http://msp.ucsd.edu/Pd_documentation/
-* ''Layered Graph Drawing'' https://en.wikipedia.org/wiki/Layered_graph_drawing
-* ''Automatic graph layout'' https://en.wikipedia.org/wiki/Microsoft_Automatic_Graph_Layout
-* ''CEPL'' https://github.com/cbaggers/cepl
-* ''Projection Boxes'' http://cseweb.ucsd.edu/~lerner/papers/projection-boxes-chi2020.pdf
-* ''Glamorous Toolkit'' https://gtoolkit.com/
-* ''Cellular Automation Demo'' https://movablefeastmachine.org/
-* ''Shader Toy launcher for Vulkan'' https://github.com/danilw/vulkan-shadertoy-launcher
-</pre>
 </div>
 <div created="20200608152338505" modified="20200609142507338" tags="dx7 audio" title="DX7">
 <pre>''Programming'' https://homepages.abdn.ac.uk/d.j.benson/pages/dx7/manuals/prgrmdx7.pdf
