Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -11315,7 +11315,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200609150013704" list="[[Live Coding]] [[Live Coding]]" modified="20200609150013704" title="$:/StoryList">
+<div created="20200609150035609" list="[[Live Coding]]" modified="20200609150106598" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12470,7 +12470,7 @@ https://chrismaughan.com/blog/coding/2019_07_01_graphviz/</pre>
 <div created="20200604075809465" modified="20200604075904519" tags="lisp scheme" title="Lisp Languages">
 <pre>* ''Fe'' https://github.com/rxi/fe</pre>
 </div>
-<div created="20200603094139854" modified="20200604075943340" tags="live-coding" title="Live Coding" type="text/vnd.tiddlywiki">
+<div created="20200603094139854" modified="20200609150043638" tags="live-coding" title="Live Coding" type="text/vnd.tiddlywiki">
 <pre>* [[Lisp Languages]]
 * ''Sonic Pi'' Forum: https://in-thread.sonic-pi.net/
 * ''Sonic Pi'' On Stack Overflow Blog: https://stackoverflow.blog/2020/01/29/the-live-coding-language-that-lets-you-be-an-actual-rock-star/
