--- a/about/index.html
+++ b/about/index.html
@@ -121,16 +121,11 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>About me</h1>
          <p>I&rsquo;m a programmer.  I like to follow my nose and experiment with tools, technology and graphics.  Most of my personal projects &amp; work are with the visual side of computing; in particular 3D Graphics.</p>
-
 <p>I&rsquo;m pretty good at grasping stuff and building things quickly.</p>
-
 <p>I work for NVIDIA in my day job, building tools and technologies for developers. I&rsquo;ve been doing that for about 20 years.</p>
-
 <p>In York where I live, I&rsquo;m a trustee of the York Developers Charity, which promotes coding.  I sometimes teach coding or give lectures on various technologies.</p>
-
 <p>I&rsquo;m most comfortable using C++, but have good experience with C# and many other languages.</p>
-
-<p><img src="/img/about.jpg" alt="Me" /></p>
+<p><img src="/img/about.jpg" alt="Me"></p>
 
       </div>
     </div>
