--- a/portfolio/boardz/index.html
+++ b/portfolio/boardz/index.html
@@ -121,11 +121,8 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Boardz</h1>
          <p>Boardz was a collection of turn based board games released for iPhone and iPad.  It included a server, player matching &amp; chat.</p>
-
 <p>The host was written in C++ &amp; Objective C, the server was Ruby On Rails running inside a Heroku host.</p>
-
 <p>Games available were:</p>
-
 <ul>
 <li>Chess</li>
 <li>Draughts</li>
@@ -133,8 +130,8 @@ if (!doNotTrack) {
 <li>Shogi</li>
 <li>Chinese Chess</li>
 </ul>
-
-<p><img src="/img/portfolio/boardz/boardz_ipad.png" alt="The IPad Version of Boardz" /></p>
+<p>![The IPad Version of Boardz][1]
+[1]: /img/portfolio/boardz/boardz_ipad.png</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
