--- a/portfolio/easyrender/index.html
+++ b/portfolio/easyrender/index.html
@@ -121,12 +121,9 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Easy Render</h1>
          <p>Easy Render is a lightweight sample of how to do simple CPU drawing to a Windows Window.</p>
-
 <p>The project contains the bare minimum of code to make it easy to get something on the screen.  A tip - it runs much faster on a release build - but this is not really about speed!</p>
-
 <p><a href="https://github.com/cmaughan/easyrender">On Github</a></p>
-
-<p><img src="/img/portfolio/easyrender/easyrender.png" alt="EasyRender" /></p>
+<p><img src="/img/portfolio/easyrender/easyrender.png" alt="EasyRender"></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
