--- a/portfolio/foxbear/index.html
+++ b/portfolio/foxbear/index.html
@@ -121,10 +121,8 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>DX Driver</h1>
          <p>At 3DLabs, I ran the DirectX Driver team.  I worked on DirectX 2,3,5,7 and 8 drivers - mostly for Permedia &amp; Glint chips.</p>
-
 <p>If you can remember this app, you are old ;) This is one of the first DirectDraw applications Microsoft made.  I used to spend too much time making it work on various iterations of 3Dlabs hardware.  One interesting challenge was making this run out of AGP memory on a Permedia GPU.  I also used it to test a new linear video memory allocator.</p>
-
-<p><img src="/img/portfolio/foxbear/foxbear.png" alt="FoxBear" /></p>
+<p><img src="/img/portfolio/foxbear/foxbear.png" alt="FoxBear"></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
