--- a/portfolio/fxcomposer/index.html
+++ b/portfolio/fxcomposer/index.html
@@ -121,28 +121,19 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>NVIDIA FX Composer</h1>
          <p>FX Composer 2.5 is a powerful integrated development environment for shader authoring.</p>
-
 <p>At NVIDIA, I wrote a prototype shader IDE called FXComposer.  It became a bigger project with many folks working on it.  Eventually, when shader tools from other companies came on line, the project was finished.</p>
-
 <p>We wrote many interesting shaders and effects, and with a big team behind it, there were lots of features for experimenting with shaders, including ways to measure instruction cycles &amp; performance.</p>
-
 <p>There were many interesting things I learned working on this project, such as:</p>
-
 <ul>
 <li>C#/.NET development</li>
 <li>IronPython/Python (embedded in the Application)</li>
 <li>Building a more complex IDE</li>
 </ul>
-
 <p>I wrote a couple chapters about FXComposer in GPU Gems, you can find them <a href="https://developer.nvidia.com/gpugems/GPUGems/gpugems_ch30.html">Here</a> and <a href="https://developer.nvidia.com/gpugems/GPUGems/gpugems_ch31.html">Here</a></p>
-
 <p>FXComposer is still available for download <a href="https://developer.nvidia.com/fx-composer">Here</a></p>
-
-<p><img src="/img/portfolio/fxcomposer/fxcomposer_2.jpg" alt="FXComposer" /></p>
-
-<p><img src="/img/portfolio/fxcomposer/fxcomposer_2.png" alt="FXComposer" /></p>
-
-<p><img src="/img/portfolio/fxcomposer/fxcomposer.png" alt="FXComposer" /></p>
+<p><img src="/img/portfolio/fxcomposer/fxcomposer_2.jpg" alt="FXComposer"></p>
+<p><img src="/img/portfolio/fxcomposer/fxcomposer_2.png" alt="FXComposer"></p>
+<p><img src="/img/portfolio/fxcomposer/fxcomposer.png" alt="FXComposer"></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
