--- a/portfolio/gameoflife/index.html
+++ b/portfolio/gameoflife/index.html
@@ -121,14 +121,10 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Game Of Life</h1>
          <p>Implementing Game of Life is a classic programming challenge.</p>
-
 <p>My version shown here implements the speed up detailed in this <a href="http://www.drdobbs.com/go-parallel/article/print?articleId=184406478&amp;siteSectionName=">paper</a> which enables simulation of millions of iterations by exploiting the repetive nature of the algorithm.  Also - best title for an academic paper ever ;)</p>
-
 <p>I need to dig out the source for this, I can&rsquo;t find it off hand, but there is an earlier version in the teaching framework <a href="https://github.com/cmaughan/mgfx">Mgfx</a>.</p>
-
-<p><img src="/img/portfolio/gameoflife/gameoflife_2.png" alt="Game of Life" /></p>
-
-<p><img src="/img/portfolio/gameoflife/gameoflife.png" alt="Game of Life" /></p>
+<p><img src="/img/portfolio/gameoflife/gameoflife_2.png" alt="Game of Life"></p>
+<p><img src="/img/portfolio/gameoflife/gameoflife.png" alt="Game of Life"></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
