--- a/portfolio/gestures/index.html
+++ b/portfolio/gestures/index.html
@@ -121,10 +121,9 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Gestures</h1>
          <p>Recognizing gestures for a spell casting game idea.</p>
-
 <p>This was fun, but I wasn&rsquo;t sure how to make it work in a real game.  I learned quite a bit about the science of gesture recognition though.</p>
-
-<p><img src="/img/portfolio/gestures/gestures.png" alt="Gestures" /></p>
+<p>![Gestures][1]
+[1]: /img/portfolio/gestures/gestures.png</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
