--- a/portfolio/gputrace/index.html
+++ b/portfolio/gputrace/index.html
@@ -121,12 +121,10 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Nsight Graphics</h1>
          <p>I currently work on the Nsight Graphics Team at NVIDIA.</p>
-
 <p>There&rsquo;s a great talk about GPU Trace <a href="https://news.developer.nvidia.com/what-is-limiting-your-rendering-performance/">here</a></p>
-
 <p>You can download Nsight Graphics <a href="https://developer.nvidia.com/nsight-graphics">here</a>.</p>
-
-<p><img src="/img/portfolio/gputrace/gputrace.png" alt="GPUTrace" /></p>
+<p>![GPUTrace][1]
+[1]: /img/portfolio/gputrace/gputrace.png</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
