--- a/portfolio/jorvik/index.html
+++ b/portfolio/jorvik/index.html
@@ -121,21 +121,14 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Jorvik</h1>
          <p>Jorvik is my current Code &amp; Coffee project.  It is intended to be a live shader editing tool for Algorave and Interactive applications.</p>
-
 <p>When finished it will support Vulkan and DX12.  It&rsquo;s a great way for me to improve my Vulkan knowledge.
 The screenshots are all on the Vulkan backend.</p>
-
-<p>The editor you see running in the window is <a href="https://chrismaughan.com/portfolio/zep/">Zep</a></p>
-
-<p><img src="/img/portfolio/jorvik/jorvik_1.png" alt="Jorvik" /></p>
-
-<p><img src="/img/portfolio/jorvik/jorvik_2.png" alt="Jorvik" /></p>
-
-<p><img src="/img/portfolio/jorvik/jorvik_3.png" alt="Jorvik" /></p>
-
-<p><img src="/img/portfolio/jorvik/jorvik_4.png" alt="Jorvik" /></p>
-
-<p><img src="/img/portfolio/jorvik/jorvik_5.png" alt="Jorvik" /></p>
+<p>The editor you see running in the window is [Zep] ( https://chrismaughan.com/portfolio/zep/)</p>
+<p><img src="/img/portfolio/jorvik/jorvik_1.png" alt="Jorvik"></p>
+<p><img src="/img/portfolio/jorvik/jorvik_2.png" alt="Jorvik"></p>
+<p><img src="/img/portfolio/jorvik/jorvik_3.png" alt="Jorvik"></p>
+<p><img src="/img/portfolio/jorvik/jorvik_4.png" alt="Jorvik"></p>
+<p><img src="/img/portfolio/jorvik/jorvik_5.png" alt="Jorvik"></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
