--- a/portfolio/nveffectsbrowser/index.html
+++ b/portfolio/nveffectsbrowser/index.html
@@ -121,17 +121,13 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>NVIDIA Effects Browser</h1>
          <p>My first job at NVIDIA was writing a tool to enable developers to understand vertex and pixel shaders.</p>
-
 <p>I got the chance to build lots of fun little shaders which showed how to implement standard things like point light sources or volume fog; and previously impossible things such as reflective bump mapping.</p>
-
 <p>My initial host could support plugin effects, and after I&rsquo;d written a few basic effects, others at NVIDIA took over writing them, as well as eventually building a better effect browser which shipped on later SDKs.
 The shaders here were typically written in Shader Assembly language; we had no C-like language at that point.</p>
-
 <p>If I remember correctly, this tool was a C++ app using standard Win32 UI control widgets.</p>
-
 <p><a href="http://archive.gamedev.net/archive/columns/hardcore/dxshader1/page3.html">There&rsquo;s a site that talks about it here</a>, but I don&rsquo;t have a nice screenshot of this any more.</p>
-
-<p><img src="/img/portfolio/nveffectsbrowser/nveffectsbrowser.jpg" alt="NVIDIA Effects Browser" /></p>
+<p>![NVIDIA Effects Browser][1]
+[1]: /img/portfolio/nveffectsbrowser/nveffectsbrowser.jpg</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
