--- a/portfolio/scheme/index.html
+++ b/portfolio/scheme/index.html
@@ -121,10 +121,9 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Scheme</h1>
          <p>Building a lisp interpreter is an interesting exercise, especially if you are new to functional programming.</p>
-
 <p><a href="https://github.com/cmaughan/JorvikScheme">This one on github</a> is an early one I built.  I would probably do a cleaner version these days.</p>
-
-<p><img src="/img/portfolio/scheme/scheme.png" alt="Scheme" /></p>
+<p>![Scheme][1]
+[1]: /img/portfolio/scheme/scheme.png</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
