--- a/portfolio/sonicpi/index.html
+++ b/portfolio/sonicpi/index.html
@@ -121,14 +121,10 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Sonic Pi</h1>
          <p>I contributed a pair of scopes to the latest version of Sonic Pi 3.2, which has now shipped.</p>
-
 <p>In order to learn a bit more about a live coding language, I built and played with sonic pi.  I found that the graphs provided in the tool were using a toolkit called Qwt.  This is an old Qt toolkit, which was not really doing anything other than drawing a simple line graph - as well as making the build of the product more complicated.  I showed Sam (the creator of Sonic Pi) how to replace the Qwt library with simple paint commands.  I then contributed two nicer scopes; a &lsquo;mirror stereo&rsquo; effect showing the live audio waveform, and a spectrum analyzer.  My live coding work meant I already had source to generate a frequency analysis using an FFT (Fast Fourier Transform), so it wasn&rsquo;t much effort to make a scope for that.  It&rsquo;s now the default shipping scope in sonic pi, and works great.  It&rsquo;s been nice to see so many users streaming performances with the new scopes on display!</p>
-
 <p>In addition to the scopes, I showed Sam how to move his build over to CMake to enable a more effortless build process.</p>
-
 <p><a href="https://sonic-pi.net">Sonic Pi 3.2</a></p>
-
-<p><img src="/img/portfolio/sonicpi/sonicpi.png" alt="SonicPi" /></p>
+<p><img src="/img/portfolio/sonicpi/sonicpi.png" alt="SonicPi"></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
