--- a/portfolio/stocks/index.html
+++ b/portfolio/stocks/index.html
@@ -121,10 +121,9 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Stocks</h1>
          <p>Understanding how Option Trades evolve over time is key to being able to trade them effectively.</p>
-
 <p>I wrote a little graph rendering tool to show stock charts.  This one isn&rsquo;t open source.</p>
-
-<p><img src="/img/portfolio/stocks/stocks.png" alt="Stocks" /></p>
+<p>![Stocks][1]
+[1]: /img/portfolio/stocks/stocks.png</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
