--- a/portfolio/voxels/index.html
+++ b/portfolio/voxels/index.html
@@ -121,10 +121,9 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Voxels</h1>
          <p>Most graphics programmers have played with Voxels/Minecraft style of rendering.</p>
-
 <p>Just a throwaway experiment, with ambient occlusion on the blocks.</p>
-
-<p><img src="/img/portfolio/voxels/voxels.png" alt="Voxes" /></p>
+<p>![Voxes][1]
+[1]: /img/portfolio/voxels/voxels.png</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
