--- a/portfolio/game/index.html
+++ b/portfolio/game/index.html
@@ -121,13 +121,10 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Game</h1>
          <p>I like to tinker at Game Development occasionally; my hex planet app shown here is one such example.</p>
-
-<p><img src="/img/portfolio/game/game.jpg" alt="Game" /></p>
-
+<p><img src="/img/portfolio/game/game.jpg" alt="Game"></p>
 <p>I sadly don&rsquo;t have time to build a game - this is probably a retirement project ;)
 The screenshot below shows the game inside an engine based on ImGui.  The shader implements an atmospheric scattering algorithm, which you can read about <a href="https://developer.nvidia.com/gpugems/GPUGems2/gpugems2_chapter16.html">here</a>.</p>
-
-<p><img src="/img/portfolio/game/game_engine.png" alt="Game" /></p>
+<p><img src="/img/portfolio/game/game_engine.png" alt="Game"></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
