--- a/portfolio/maudio/index.html
+++ b/portfolio/maudio/index.html
@@ -121,12 +121,10 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>MAudio</h1>
          <p>I&rsquo;ve been working on a graph-based synthesizer for some time, as part of my larger live coding project.</p>
-
 <p>When finished, it will be possible to reconfigure the synthesizer using script.  This should make it flexible enough to generate a wide range of sounds.  Here&rsquo;s a video of it in action:</p>
 
-
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="//www.youtube.com/embed/CmTfwoxM_gQ" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+  <iframe src="https://www.youtube.com/embed/CmTfwoxM_gQ" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
