--- a/portfolio/mgfx/index.html
+++ b/portfolio/mgfx/index.html
@@ -121,14 +121,11 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Mgfx</h1>
          <p>Mgfx is a teaching framework I&rsquo;ve used at York Developers.  It has a simple support for building 2D and 3D applications in C++, with cross platform support.</p>
-
 <p>Mgfx was my first foray into making an application that ran on Mac, Windows &amp; PC, and was easy to build from github.  I would do some things differently now, but it remains a handy tool for trying new ideas.</p>
-
 <p>When combined with ImGui it is easy to make a new renderer and let the user pick parameters.  The binary also lets you switch between the various demos.</p>
-
 <p><a href="https://www.github.com/cmaughan/Mgfx">On Github here</a></p>
-
-<p><img src="/img/portfolio/mgfx/mgfx.png" alt="Mgfx" /></p>
+<p>![Mgfx][1]
+[1]: /img/portfolio/mgfx/mgfx.png</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
