--- a/portfolio/nvlink/index.html
+++ b/portfolio/nvlink/index.html
@@ -121,14 +121,11 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>NV Shader Linker</h1>
          <p>NV Shader Linker was an attempt to build a traditional fixed function graphics pipeline using a series of shader fragments.</p>
-
 <p>I built this tool to show developers how to implement fixed function shading on modern hardware without those facilities.  The demo let you pick the number and type of lights you wanted to use, and then generated a working shader supporting them.  The demo also applied the results to a model in NVIDIA Effects Browser.  Skinning was supported, though I don&rsquo;t recall if that was done in the shader!</p>
-
 <p>The fun part of this project was figuring out how to declare shader &lsquo;fragments&rsquo; and sew them together at runtime.  Additionally, I did some rudimentary optimization to remove dead code and reduce register usage.</p>
-
 <p>Not long after this, Microsoft shipped a similar system in their SDK, which was very similar to this one.</p>
-
-<p><img src="/img/portfolio/nvlink/nvlink.jpg" alt="NVLINK" /></p>
+<p>![NVLINK][1]
+[1]: /img/portfolio/nvlink/nvlink.jpg</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
