--- a/portfolio/raytracer_aa/index.html
+++ b/portfolio/raytracer_aa/index.html
@@ -121,16 +121,11 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Ray Tracer</h1>
          <p>Every graphics engineer should write a ray tracer at some point.  I&rsquo;ve done this a couple of times in C++ and Python.</p>
-
 <p>Teaching ray tracing is challenging but fun too.  With these frameworks I tried to build all the &lsquo;hard&rsquo; stuff into simple libraries and have the students work at the simpler task of calculating ray/object collisions and generating colors.</p>
-
 <p>The examples shown here implement diffuse and specular ray tracing, along with some simple AA to improve the final image.  Without AA they run in real time and you can &lsquo;walk&rsquo; around the objects.</p>
-
 <p><a href="https://github.com/cmaughan/RayTracer">RayTracer on Github</a></p>
-
-<p><img src="/img/portfolio/raytracer/raytracer_aa.png" alt="Ray Tracer" /></p>
-
-<p><img src="/img/portfolio/raytracer/raytracer_aa2.png" alt="Ray Tracer" /></p>
+<p><img src="/img/portfolio/raytracer/raytracer_aa.png" alt="Ray Tracer"></p>
+<p><img src="/img/portfolio/raytracer/raytracer_aa2.png" alt="Ray Tracer"></p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
