--- a/portfolio/zep/index.html
+++ b/portfolio/zep/index.html
@@ -121,10 +121,9 @@ if (!doNotTrack) {
       <div class="content-column-content">
          <h1>Zep</h1>
          <p>Zep is a lightweight editor, designed to be used inside a 3D engine.</p>
-
 <p>See <a href="https://github.com/cmaughan/zep">Github</a> for more information about Zep.</p>
-
-<p><img src="/img/portfolio/zep/zep.png" alt="Zep" /></p>
+<p>![Zep][1]
+[1]: /img/portfolio/zep/zep.png</p>
          <div id="disqus_thread"></div>
 <script type="application/javascript">
     var disqus_config = function () {
